<?xml version="1.0"?>
<package format="3">
  <name>amr_nav</name>
  <version>0.1.0</version>
  <description>Simple AMR navigation example for CI/CD</description>

  <maintainer email="dev@company.com">robot-dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>pytest</test_depend>
</package>
